# Multi-Agent-System-for-Scientific-and-Technological-Monitoring

./: .env  .gitignore  README.md  compose.yaml  main.py  playground.py  pyproject.toml  requirements.txt
api_quota_management/: quota_mecanisme.py
bloc_1/: context_agent.py  generated_tasks.py  generated_users.py
bloc_2/: AgentsFindNews.py  AgentsResearchTeam.py  SearchWorkflow.py  SmartLinkAnalysisWorkflow.py  __init__.py  initSearchWorkflow.py  my_exa.py  prompt.py  prompt_.py  structured_outputs.py
bloc_2/api_quota_management/: key_rotator_utils.py  quota_mecanisme.py  readme.md
bloc_2/tmp/: memory.db
frontend/: app.py  main.py  searchbar.py
frontend/chat/: agents_ui.py  stylee.py
frontend/news/: news.py  news_.py  refresh.py  style.py
frontend/saved_liked/: liked.py  saved.py
frontend/settings/: profile.py  system_settings.py
test/: AgentsResearchTeam.ipynb  Orchestrator_search.py  UserQueryDecompositionSystem.ipynb  UserQueryDecompositionSystem.py  exa_test.py  get_image.py  quota_manager.py  struct_output.py  test_chatagent.py  testfile.py  tools.py
test/output_subqueries/: HuggingFaceTB_SmolLM2-360M-Instruct_output_357.8028631210327.json  Qwen_Qwen2.5-0.5B-Instruct_output_371.90548944473267.json  google_flan-t5-small_output_39.98084878921509.json  google_gemma-1.1-2b-it_output_414.48303866386414.json  openai-community_gpt2-medium-Instruct_output_206.57680201530457.json
test/tmp/: agno_workflows.db
tmp/: memory.db
